@@ -1,0 +1,201 @@
+/* XPM */
+static char * status_attached_xpm[] = {
+"16 16 182 2",
+"  	c None",
+". 	c #000064",
+"+ 	c #08086E",
+"@ 	c #2C2C83",
+"# 	c #353588",
+"$ 	c #181878",
+"% 	c #000067",
+"& 	c #252583",
+"* 	c #8686BC",
+"= 	c #C7C7E1",
+"- 	c #CECFE5",
+"; 	c #CFCFE5",
+"> 	c #CECEE5",
+", 	c #A5A5CE",
+"' 	c #4D4D9C",
+") 	c #040468",
+"! 	c #222285",
+"~ 	c #8B8CC2",
+"{ 	c #A1AAD8",
+"] 	c #A0A9D6",
+"^ 	c #9BA4D2",
+"/ 	c #99A1D0",
+"( 	c #98A1CF",
+"_ 	c #98A2D0",
+": 	c #9194C7",
+"< 	c #5E5EA8",
+"[ 	c #00006A",
+"} 	c #000074",
+"| 	c #313799",
+"1 	c #7281C5",
+"2 	c #5155A3",
+"3 	c #4B4C9C",
+"4 	c #4C4C9D",
+"5 	c #4C4C9C",
+"6 	c #555DA9",
+"7 	c #4D57A8",
+"8 	c #000077",
+"9 	c #000066",
+"0 	c #00006F",
+"a 	c #0F1588",
+"b 	c #4659B6",
+"c 	c #191C87",
+"d 	c #1B218C",
+"e 	c #151C8B",
+"f 	c #101788",
+"g 	c #0E1485",
+"h 	c #0E1180",
+"i 	c #0D0E7A",
+"j 	c #0A0A77",
+"k 	c #09107E",
+"l 	c #0B1586",
+"m 	c #000179",
+"n 	c #5063BD",
+"o 	c #293196",
+"p 	c #353EA1",
+"q 	c #3B49AB",
+"r 	c #4C57B6",
+"s 	c #5960BF",
+"t 	c #6468C7",
+"u 	c #424FB5",
+"v 	c #00067D",
+"w 	c #000175",
+"x 	c #000072",
+"y 	c #0A1482",
+"z 	c #000078",
+"A 	c #00016B",
+"B 	c #151F90",
+"C 	c #4959B7",
+"D 	c #424EAC",
+"E 	c #B0B1E3",
+"F 	c #D7C5F0",
+"G 	c #C3AEE8",
+"H 	c #B19BE3",
+"I 	c #A591E2",
+"J 	c #978AE2",
+"K 	c #0E1F95",
+"L 	c #00067C",
+"M 	c #000073",
+"N 	c #000472",
+"O 	c #3943AB",
+"P 	c #263CA8",
+"Q 	c #3F53B7",
+"R 	c #CDC2EE",
+"S 	c #DCC5F0",
+"T 	c #B7AAE7",
+"U 	c #4057C3",
+"V 	c #2542B8",
+"W 	c #2D45B8",
+"X 	c #132AA1",
+"Y 	c #000A83",
+"Z 	c #000276",
+"` 	c #000075",
+" .	c #00006E",
+"..	c #000879",
+"+.	c #3E49B2",
+"@.	c #1C3AB0",
+"#.	c #1E3BB5",
+"$.	c #3656C7",
+"%.	c #7F8ADD",
+"&.	c #ABA1E6",
+"*.	c #445ECC",
+"=.	c #0428B0",
+"-.	c #001DA3",
+";.	c #001596",
+">.	c #000D88",
+",.	c #000479",
+"'.	c #00006D",
+").	c #000B7E",
+"!.	c #2135AA",
+"~.	c #3B58CA",
+"{.	c #0832BF",
+"].	c #0D3BC9",
+"^.	c #0B3ACB",
+"/.	c #1040CB",
+"(.	c #4563D7",
+"_.	c #7686E5",
+":.	c #4A5ECD",
+"<.	c #0F2AA6",
+"[.	c #000E8A",
+"}.	c #00047A",
+"|.	c #000D7E",
+"1.	c #01189E",
+"2.	c #6379DC",
+"3.	c #1249D8",
+"4.	c #013FDE",
+"5.	c #013EDD",
+"6.	c #003AD5",
+"7.	c #0033C9",
+"8.	c #0935C0",
+"9.	c #7A7BE1",
+"0.	c #716FD9",
+"a.	c #2435A7",
+"b.	c #000377",
+"c.	c #001DA6",
+"d.	c #1133B8",
+"e.	c #6882EB",
+"f.	c #4471F1",
+"g.	c #235FED",
+"h.	c #1B54E1",
+"i.	c #2955D8",
+"j.	c #4F67D9",
+"k.	c #7570DC",
+"l.	c #6A63D3",
+"m.	c #424EBB",
+"n.	c #000173",
+"o.	c #000071",
+"p.	c #001A93",
+"q.	c #002CC2",
+"r.	c #0333C7",
+"s.	c #285EE8",
+"t.	c #476BE7",
+"u.	c #536DE2",
+"v.	c #5368DA",
+"w.	c #495DCF",
+"x.	c #394CBE",
+"y.	c #2032A4",
+"z.	c #03087B",
+"A.	c #000076",
+"B.	c #0024A9",
+"C.	c #0037D4",
+"D.	c #002BC2",
+"E.	c #0026B5",
+"F.	c #0023AF",
+"G.	c #001CA3",
+"H.	c #001494",
+"I.	c #000A84",
+"J.	c #000278",
+"K.	c #00017A",
+"L.	c #00209E",
+"M.	c #0029B9",
+"N.	c #0025B7",
+"O.	c #001AA5",
+"P.	c #001296",
+"Q.	c #000C8C",
+"R.	c #000885",
+"S.	c #00047D",
+"T.	c #000070",
+"U.	c #001489",
+"V.	c #001188",
+"W.	c #000D81",
+"X.	c #000778",
+"Y.	c #00036E",
+"          . + @ # $ %           ",
+"        & * = - ; > , ' )       ",
+"    . ! ~ { ] ^ / ( _ : < [     ",
+"    } | 1 2 3 4 5 5 5 6 7 8 9   ",
+"  0 a b c d e f g h i j k l }   ",
+". m n o p q r s t u v w x y z % ",
+"A B C D E F G H I J K L M x 8 [ ",
+"N O P Q R S T U V W X Y Z x `  .",
+"..+.@.#.$.%.&.*.=.-.;.>.,.x ` '.",
+").!.~.{.].^./.(._.:.<.[.}.x 8 [ ",
+"|.1.2.3.4.5.6.7.8.9.0.a.b.x z . ",
+"  c.d.e.f.g.h.i.j.k.l.m.n.8 o.  ",
+"  p.q.r.s.t.u.v.w.x.y.z.A.`     ",
+"    B.C.D.E.F.G.H.I.J.K.` .     ",
+"      L.M.N.O.P.Q.R.S.T.        ",
+"          U.V.W.X.Y..           "};
